fix: removed TableBody in order to check if it breaks the class test

--- a/src/components/product/ProductTabs.module.scss
+++ b/src/components/product/ProductTabs.module.scss
@@ -58,12 +58,12 @@
     background-color: rgba(colors.$primary_main, 0.15);
 }
 
-.tab-bids-table>*>*>*>*.table-cell-1{
+.tab-bids-table>*>*>*.table-cell-1{
     padding: 14px 10px 16px 24px;
     width: 56%;
 }
 
-.tab-bids-table>*>*>*>*.table-cell-1 *{
+.tab-bids-table>*>*>*.table-cell-1 *{
     font-family: "Montserrat", sans-serif;
     font-style: normal;
     font-weight: bold;
@@ -71,7 +71,7 @@
     line-height: 17px
 }
 
-.tab-bids-table>*>*>*>*.table-cell-2{
+.tab-bids-table>*>*>*.table-cell-2{
     padding-top: 11px;
     text-align: center;
     width: 15%;
@@ -83,7 +83,7 @@
     color: colors.$secondary_main;
 }
 
-.tab-bids-table>*>*>*>*.table-cell-3{
+.tab-bids-table>*>*>*.table-cell-3{
     text-align: center;
     padding-top: 11px;
     font-family: "Montserrat",sans-serif;
